# recommendation_microservices

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: client_service.py  db_filler.py  recommendation_service.py  user_service.py
